# GoGamesScrape

./: .gitignore  README  README.md  main.py  pagetest.txt  pyproject.toml  test.py
