[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "9x9-go-games-scrape"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23"
lxml = "^4.5"
selenium = "^3.141"
[tool.poetry.dev-dependencies]
